--- a/src/asset/css/dark.css
+++ b/src/asset/css/dark.css
@@ -7,3 +7,11 @@ html, body {
     height: 100%;
     color: azure !important;
 }
+
+.dark h1 {
+    color: lightsalmon;
+}
+
+.dark .navbar-brand {
+    color: coral;
+}
